its-time-for-smiles/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: its-time-for-smiles
  namespace: smiles
spec:
  replicas: 2
  selector:
    matchLabels:
      app: its-time-for-smiles
  template:
    metadata:
      labels:
        app: its-time-for-smiles
    spec:
      containers:
        - name: its-time-for-smiles
          image: ghcr.io/davidcode2/its-time-for-smiles:0.0.4
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
