its-time-for-smiles/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: its-time-for-smiles
  namespace: smiles
spec:
  selector:
    app: its-time-for-smiles
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
